add making Categorical value to number

--- a/Data-Preprocessing/009_category.ipynb
+++ b/Data-Preprocessing/009_category.ipynb
@@ -703,36 +703,363 @@
    "metadata": {},
    "source": [
     "---------------------------------------------------------------\n",
-    "## 9.5 범주형의 수치화"
+    "## 9.5 범주형의 수치화\n",
+    "학습 데이터의 양이 적어 범줏값을 고려한 예측 모델을 만들 때 자주 사용한다. <br>\n",
+    "하지만 범주형을 수치화할 때는 주의해야함. 과학습이 발생하거나 원래 데이터가 지니는 의미를 잃을 수 있다. <br>\n",
+    "따라서 범주 데이터를 수치화하는 방법은 기본적으로 추천하지 않는다. <br>\n",
+    "<br>\n",
+    "\n",
+    "수치화 방법은 해당하는 범줏값별로 지표나 범줏값에 대한 극값, 대푯값, 분포를 이용하는 경우가 많다. <br>\n",
+    "예를 들어 제조 레코드 결과물을 수치화할 경우 다음 세 가지가 있다.\n",
+    "1. 결과물 종류별로 레코드에서의 출현 횟수를 세서 범줏값 대신 사용한다.\n",
+    "2. 결과물 종류별로 제조 불량률을 계산하여 범줏값 대신 이용한다.\n",
+    "3. 범줏값별로 제조 불량률을 기준으로 하고 불량률이 높은 순서로 순위를 매겨 범줏값 대신 이용한다.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "production=pd.read_csv('./data/production.csv',encoding='UTF-8')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>length</th>\n",
+       "      <th>thickness</th>\n",
+       "      <th>fault_flg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E</td>\n",
+       "      <td>274.027383</td>\n",
+       "      <td>40.241131</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D</td>\n",
+       "      <td>86.319269</td>\n",
+       "      <td>16.906715</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E</td>\n",
+       "      <td>123.940388</td>\n",
+       "      <td>1.018462</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>175.554886</td>\n",
+       "      <td>16.414924</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>244.934740</td>\n",
+       "      <td>29.061081</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  type      length  thickness  fault_flg\n",
+       "0    E  274.027383  40.241131      False\n",
+       "1    D   86.319269  16.906715      False\n",
+       "2    E  123.940388   1.018462      False\n",
+       "3    B  175.554886  16.414924      False\n",
+       "4    B  244.934740  29.061081      False"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "production.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 제품 종류별 불량률\n",
+    "fault_cnt_per_type=production.query('fault_flg').groupby('type')['fault_flg'].count()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "A    11\n",
+       "B     6\n",
+       "C    16\n",
+       "D     7\n",
+       "E    12\n",
+       "Name: fault_flg, dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fault_cnt_per_type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 제품 종류별 제조 수\n",
+    "type_cnt=production.groupby(['type'])['fault_flg'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "A    202\n",
+       "B    175\n",
+       "C    211\n",
+       "D    215\n",
+       "E    197\n",
+       "Name: fault_flg, dtype: int64"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_cnt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fault_cnt_per_type['A']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "production['type_fault_rate']=production[['type','fault_flg']].apply(lambda x: (fault_cnt_per_type[x[0]] - int(x[1]) ) / (type_cnt[x[0]] - 1), axis=1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>length</th>\n",
+       "      <th>thickness</th>\n",
+       "      <th>fault_flg</th>\n",
+       "      <th>type_fault_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E</td>\n",
+       "      <td>274.027383</td>\n",
+       "      <td>40.241131</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.061224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D</td>\n",
+       "      <td>86.319269</td>\n",
+       "      <td>16.906715</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.032710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E</td>\n",
+       "      <td>123.940388</td>\n",
+       "      <td>1.018462</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.061224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>175.554886</td>\n",
+       "      <td>16.414924</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.034483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>B</td>\n",
+       "      <td>244.934740</td>\n",
+       "      <td>29.061081</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.034483</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  type      length  thickness  fault_flg  type_fault_rate\n",
+       "0    E  274.027383  40.241131      False         0.061224\n",
+       "1    D   86.319269  16.906715      False         0.032710\n",
+       "2    E  123.940388   1.018462      False         0.061224\n",
+       "3    B  175.554886  16.414924      False         0.034483\n",
+       "4    B  244.934740  29.061081      False         0.034483"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "production.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----------------------\n",
+    "## 9.6 범주형의 보완"
+   ]
   },
   {
    "cell_type": "code",
