add various types of non-parametric-test

--- a/Statistics/Chapter12_non-parametric-statistics.ipynb
+++ b/Statistics/Chapter12_non-parametric-statistics.ipynb
@@ -11,6 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Types of Nonparametric Tests\n",
+    "https://www.statisticshowto.com/parametric-and-non-parametric-data/ <br>\n",
+    "\n",
+    "* 1-sample sign test. \n",
+    "    * Use this test to estimate the median of a population and compare it to a reference value or target value.\n",
+    "* 1-sample Wilcoxon signed rank test. \n",
+    "    * With this test, you also estimate the population median and compare it to a reference/target value. However, the test assumes your data comes from a symmetric distribution (like the Cauchy distribution or uniform distribution).\n",
+    "    * 대칭확률분포인 경우 사용\n",
+    "* Friedman test. \n",
+    "    * This test is used to test for differences between groups with ordinal dependent variables. It can also be used for continuous data if the one-way ANOVA with repeated measures is inappropriate (i.e. some assumption has been violated).\n",
+    "* Goodman Kruska’s Gamma: a test of association for ranked variables.\n",
+    "* Kruskal-Wallis test. \n",
+    "    * Use this test instead of a one-way ANOVA to find out if two or more medians are different. Ranks of the data points are used for the calculations, rather than the data points themselves.\n",
+    "* The Mann-Kendall Trend Test \n",
+    "    * looks for trends in time-series data.\n",
+    "* Mann-Whitney test. \n",
+    "    * Use this test to compare differences between two independent groups when dependent variables are either ordinal or continuous.\n",
+    "* Mood’s Median test. \n",
+    "    * Use this test instead of the sign test when you have two independent samples.\n",
+    "* Spearman Rank Correlation.\n",
+    "    * Use when you want to find a correlation between two sets of data.\n",
+    "------------------------------------------------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "비모수검정 통계량은 관측값 자체를 사용하지 않고 흔히 관측값의 부호나 순위(rank)등을 사용하는 것이 보통이다.<br>\n",
     "데이터 자체보다 데이터의 순위를 갖고 통계적 가설검정 문제를 다룰 때 정보의 손실 때문에 효율이 많이 감소되리라 생각하나 ,<br>\n",
     "실제로는 효율의 감소는 적은 반면 상당히 안전한 방법임이 증명되어 있다. <br>\n",
