--- a/Apache-Hadoop/Chapter2.하둡설치.ipynb
+++ b/Apache-Hadoop/Chapter2.하둡설치.ipynb
@@ -33,6 +33,8 @@
     "<br>\n",
     "\n",
     "* 우선 모든 하둡 다끄고 다시 실행해봄 (명령어 : ./stop-all.sh)<br>\n",
+    "    * 이때, 경로는 /Users/suhyun/Platform/hadoop-3.3.0/sbin 여기서실행해야함. <br>\n",
+    "    \n",
     "(base) josuhyeon-ui-MacBook-Pro:sbin suhyun$ ./stop-all.sh<br>\n",
     "\n",
     "(base) josuhyeon-ui-MacBook-Pro:sbin suhyun$ jps <br>\n",
@@ -61,12 +63,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
+   "source": [
+    "--------\n",
+    "### Resource Manager 웹 인터페이스 열기\n",
+    "\n",
+    "* (base) josuhyeon-ui-MacBook-Pro:hadoop-3.3.0 suhyun$ sbin/start-yarn.sh\n",
+    "\n",
+    "* (base) josuhyeon-ui-MacBook-Pro:hadoop-3.3.0 suhyun$ jps <br>\n",
+    "> 7874 Jps <br>\n",
+    "1607  <br>\n",
+    "1674 RemoteMavenServer36<br>\n",
+    "6940 NameNode<br>\n",
+    "7724 ResourceManager<br>\n",
+    "7822 NodeManager<br>\n",
+    "\n",
+    "* ResourceManager 와 NodeManager가 새로 생김."
+   ]
   },
   {
    "cell_type": "code",
