--- a/Apache-Hadoop/Chapter2.하둡설치.ipynb
+++ b/Apache-Hadoop/Chapter2.하둡설치.ipynb
@@ -48,7 +48,7 @@
     "(base) josuhyeon-ui-MacBook-Pro:hadoop suhyun$ bin/hdfs namenode -format\n",
     "<br>\n",
     "\n",
-    "* DFS 데몬 다시 실행해봄 (=> start-dfs.sh) <br>\n",
+    "* DFS 데몬 다시 실행해봄 (=> sbin/start-dfs.sh) <br>\n",
     "(base) josuhyeon-ui-MacBook-Pro:hadoop-3.3.0 suhyun$ sbin/start-dfs.sh\n",
     "<br>\n",
     "\n",
